--- a/webra1n.service
+++ b/webra1n.service
@@ -10,7 +10,7 @@ TTYPath=/dev/tty2
 TTYReset=yes
 TTYVHangup=yes
 User=root
-ExecStart=/usr/bin/webra1n
+ExecStart=/usr/bin/webra1n --port 80
 ExecStop=/bin/kill $(/bin/pidof webra1n)
 
 [Install]
